fixed padding too large

--- a/httpdocs/css/ntopng.css
+++ b/httpdocs/css/ntopng.css
@@ -679,7 +679,7 @@ path.link {
 
 
 #n-sidebar.active ul>li.nav-item>a {
-  padding: 0.8rem;
+  padding: 0.6rem;
 }
 
 #n-sidebar.active .submenu::after {
